# NumericalProgramming

./: README.md
AP/AP1/: README.md  pyproject.toml
AP/AP1/paper/: paper.md  video_script.md
AP/AP1/src/: __init__.py  distances.py  main.py  norms.py  reshape.py  unit_ball.py  utils.py
AP/AP1/tests/: conftest.py  test_norms.py
AP/AP2/: README.md  airline_clustering.py  airline_clusters.csv  analysis.ipynb  cluster_centroids.csv  paper.md  requirements.txt
AP/AP3/problem3_1/: README.md  requirements.txt
AP/AP3/problem3_1/paper/: paper.md  slopes_summary.txt
AP/AP3/problem3_1/paper/tables/: 1d_errors.csv  2d_errors.csv
AP/AP3/problem3_1/src/: __init__.py  cli.py  experiment.py  fd1d.py  fd2d.py  functions.py  utils.py
AP/AP3/problem3_1/tests/: __init__.py  test_fd1d.py  test_fd2d.py
AP/AP4/: README.md
AP/AP4/docs/: paper.md  video_script.md
AP/AP4/src/: __init__.py  app.py  delaunay.py  geometry.py  interpolation.py  visualize.py  voronoi.py
AP/AP4/src/datasets/: cell_towers_mock.csv  coffee_shops_tbilisi.csv
miniquizes/q3_1/: plot_chebyshev_interpolation.py
